[package]
name = "mqtt-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.27", features = ["derive"] }
fern = { version = "0.6.1", features = ["colored"] }
log = "0.4.17"
paho-mqtt = { version = "0.11.1", features = [
    "ssl"
] }
securefmt = "0.1.4"
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["full"] }
